tests/ui/device-pixel-ratio.goml
// Check that the `device-pixel-ratio` command is working as expected.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-device-pixel-ratio: 1.2
assert-window-property: ({"devicePixelRatio": "1.2"}, [STARTS_WITH])
set-device-pixel-ratio: 1.5
assert-window-property: ({"devicePixelRatio": "1.5"}, [STARTS_WITH])
set-device-pixel-ratio: -2
//~^ ERROR: expected numbers above 0, found `-2`
// It should not run the next command.
assert: ".whatever"
